[package]
name = "vulkan-tunnel"
version = "0.1.0"
authors = ["Josh Shone <josh.shone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
rand = "0.7.3"
cgmath = "0.17.0"
